<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/user_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/bottom_navigation_home" />
    <item
        android:id="@+id/user_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/bottom_navigation_search" />
    <item
        android:id="@+id/item_placeholder"
        android:title="" />
    <item
        android:id="@+id/user_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/bottom_navigation_history" />
    <item
        android:id="@+id/user_info"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/bottom_navigation_user" />
</menu>