<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:background="@drawable/background_forgot_password">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#A3646465"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="120dp"
                android:layout_marginBottom="20dp"
                android:text="@string/enter_otp_enter_otp"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/tv_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/enter_otp_msg"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_duration_of_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/tv_msg"
                    android:gravity="center"
                    android:text="@string/enter_otp_duration_of_otp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RelativeLayout>

            <com.csupporter.techwiz.presentation.view.common.OtpEditText
                android:id="@+id/edt_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:inputType="number"
                android:maxLength="6"
                android:textIsSelectable="false"
                android:textSize="20sp"
                app:otp_line_color="@color/white"
                app:otp_max_length="6"
                app:otp_space="12dp"
                app:otp_text_color="@color/white_smoke" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_verify_code"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_forgot_password"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/selector_btn_verify"
                android:text="@string/enter_otp_btn_verify"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_otp_don_not_receiver_otp"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_resent_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_rectangle_corn_12"
                    android:padding="8dp"
                    android:text="@string/enter_otp_resent_opt"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </RelativeLayout>
</ScrollView>
