<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:background="@drawable/background_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/ll_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp"
                android:src="@mipmap/app_launcher" />

            <TextView
                android:id="@+id/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_header_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="35dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_username_layout"
                style="@style/AuthTextInputLayout"
                android:layout_below="@+id/header_text"
                android:hint="@string/login_hint_email"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AuthTextInputEditText"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_layout"
                style="@style/AuthTextInputLayout"
                android:layout_marginTop="20dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/AuthTextInputEditText"
                    android:hint="@string/login_hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="32" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ripple_rectangle_corn_12"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:text="@string/login_forgot_password"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_forgot_password"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bg_radius_20"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ripple_rectangle_corn_16"
            android:fontFamily="sans-serif-medium"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:text="@string/login_new_user_question"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </RelativeLayout>
</ScrollView>