<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingBottom="6dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_logout" />

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/dialog_confirm_logout_msg"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_border_radius_24"
            android:elevation="6dp"
            android:text="@string/dialog_confirm_btn_no"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_btn_confirm"
            android:backgroundTint="#1AB7FE"
            android:elevation="6dp"
            android:text="@string/dialog_confirm_btn_yes"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>